fix collapse nav 19

--- a/src/main/resources/static/css/styles.css
+++ b/src/main/resources/static/css/styles.css
@@ -116,3 +116,8 @@
     border-radius: 3px;
 }
 
+.button-collapse {
+    position: absolute;
+    right: 0;
+}
+
